# seller-hub

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  build.sh  manage.py  pyproject.toml  requirements.txt
ebay_profit_tracker/: asgi.py  settings.py  urls.py  wsgi.py
profittracker/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
profittracker/migrations/: 0001_initial.py  0002_product_actual_ebay_fee_jpy_and_more.py  0003_alter_product_ebay_fee_rate.py  0004_sellersettings.py  0005_sellersettings_default_exchange_rate.py  0006_product_actual_sale_price_jpy_manual_and_more.py  0007_remove_product_sales_channel_and_more.py  0008_sellersettings_long_inventory_days_and_more.py  0009_sellersettings_brand_keywords.py  0010_remove_shipped_status.py  0011_unique_owner_sku.py
profittracker/templates/profittracker/: analytics.html  product_confirm_delete.html  product_detail.html  product_form.html  product_import.html  product_list.html  seller_settings.html  sourcing_simulator.html
profittracker/templates/profittracker/partials/: exchange_rate_field.html  form_field.html  quick_update_fields.html
profittracker/templatetags/: profittracker_extras.py
static/css/: app.css
static/js/: analytics.js  brand_autofill.js  exchange_rate.js  sale_price_converter.js  sales_channel_defaults.js  sku_helper.js
templates/: base.html
templates/registration/: login.html
